--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ title: Matthew Gould
 description: Data Rules Everything Around Me
 google_analytics: 
 show_downloads: true
-theme: jekyll-theme-cayman
+theme: jekyll-theme-merlot
